--- a/pkg/htobit/vignettes/htobit-md.Rmd
+++ b/pkg/htobit/vignettes/htobit-md.Rmd
@@ -7,13 +7,13 @@ bibliography: htobit.bib
 vignette: >
   %\VignetteIndexEntry{Heteroscedastic Tobit Regression}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{htobit, car, crch, lmtest, memisc}
+  %\VignetteDepends{htobit2017, car, crch, lmtest, memisc}
   %\VignetteKeywords{heteroscedastic tobit, regression, R}
-  %\VignettePackage{htobit}
+  %\VignettePackage{htobit2017}
 ---
 
 ```{r preliminaries, echo = FALSE, message = FALSE, results = "hide"}
-library("htobit")
+library("htobit2017")
 library("car")
 library("crch")
 library("lmtest")
@@ -97,8 +97,8 @@ data on budget shares of alcohol and tobacco for 2724 Belgian households
 be replicated by:
 
 ```{r verbeek}
-data("AlcoholTobacco", package = "htobit")
-library("htobit")
+data("AlcoholTobacco", package = "htobit2017")
+library("htobit2017")
 ma <- htobit(alcohol ~ (age + adults) * log(expenditure) + oldkids + youngkids, data = AlcoholTobacco)
 summary(ma)
 ```
